<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="main_description">This is a basic Activity showing an Action Bar which has been
        styled.
    </string>


    <string name="app_name">MRAID Ads SDK Tester</string>
    <string name="app_name_">MRAIDAdsSDKTester</string>


    <string name="welcome_top_text">technology lab</string>
    <string name="welcome_bottom_text">Get Started</string>
    <string name="welcome_center_heading">MRAID Ads\nSDK Tester</string>
	<string name="welcome_text">A tool to test mobile creatives \nin multiple
	    mobile Ads SDK \nenvironments</string>

    <string name="header_back">Back</string>
    <string name="user_name">Name</string>
    <string name="user_company">Company</string>
    <string name="user_email">Email</string>

	<string name="policy_text1">By continuing, you are agree to our  </string>
    <string name="policy_text2">Terms
	    and Privacy Policy </string>
     <string name="policy_text3">Terms
	    and Conditions of use </string>

    <string name="login_bottom_text">SIGN UP</string>
    <string name="login_bottom_skip">Skip</string>

    <string name="Fragment1">Ad Tag</string>
    <string name="Fragment2">Select SDK</string>
    <string name="Fragment3">Ad Type</string>

    <string name="heading_ad_type">Select Ad Type</string>
    <string name="button_test_ad">Test Creative</string>

    <string-array name="nav_drawer_menu_items">
        <item >first</item>
        <item >second</item>
        <item >third</item>
    </string-array>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_navigation__drawer_">Navigation_Drawer_Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="test_creative">TEST CREATIVE</string>
    <string name="ad_tag_message">Paste Ad Tag</string>
    <string name="ad_type_heading">Ad Type</string>
    <string name="select_sdk_heading">Select SDK</string>
    <string name="ad_tag_heading">Ad Tag</string>
    <string name="bottom_nav_save">Save</string>
    <string name="bottom_nav_next">Next</string>
    <string name="bottom_nav_start_over">Start Over </string>
    <string name="bottom_nav_previous">Previous</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="hint_username">Username</string>
    <string name="hint_company_name">Company</string>
    <string name="hint_email">Email</string>
    <string name="lebel_home">TEST CREATIVE   </string>
    <string name="lebel_home_padding">Email</string>
       <string name="lebel_setting">Profile</string>
        <string name="lebel_term_condition">Term &amp; Conditions</string>
    <string name="lebel_banner_view">Banner Display View</string>
    <string name="lebel_interstitial">Interstitial Display View</string>
    <string name="get_ad">Get Ad</string>
    <string name="title_ad_display">Your Ad Will Display Here</string>
    <string name="partner_id_title">Partner ID:</string>
    <string name="site_id_title">Site ID:</string>
    <string name="enable_autorefresh">Enable AutoRefresh</string>
    <string name="loading">loading&#8230;</string>
    <string name="autorefresh_text">Ad will be refreshed in 20 sec interval</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="save_creative">Saved Creatives</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="app_version">App Version 1.0</string>
</resources>