<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/NoActionBar">

    <RelativeLayout
        android:id="@+id/action_bar_activity_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/toolbar"
            android:background="@color/text_color_grey_two"/>

        <LinearLayout
            android:id="@+id/home_nav_headings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_navigation_menu_height"
            android:layout_below="@id/toolbar"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addTagTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center"
                android:text="@string/ad_tag_heading"
                android:textSize="@dimen/default_running_text_size_medium"
                />

            <TextView
                android:id="@+id/selectSdkTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center"
                android:text="@string/select_sdk_heading"
                android:textSize="@dimen/default_running_text_size_medium"
                />

            <TextView
                android:id="@+id/selectAddTypeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center"
                android:text="@string/ad_type_heading"
                android:textSize="@dimen/default_running_text_size_medium"
               />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_nav_seprator"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/home_nav_headings"
            android:background="@color/text_color_grey_one"
            android:orientation="horizontal"/>

        <LinearLayout
            android:id="@+id/FrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_menu_seprator"
            android:layout_below="@+id/home_nav_seprator"
            android:orientation="horizontal">

            <include
                android:id="@+id/tabLayout1"
                layout="@layout/fragment_ad_tag"/>
             

            <include
                android:id="@+id/tabLayout2"
                layout="@layout/fragment_sdk"/>
             

            <include
                android:id="@+id/tabLayout3"
                layout="@layout/fragment_ad_type"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_menu_seprator"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_above="@+id/bottom_nav_menu"
            android:background="@color/text_color_grey_two"
            android:orientation="horizontal"/>

        <RelativeLayout
            android:id="@+id/bottom_nav_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_navigation_menu_height"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/back_arrow"
                android:drawableStart="@drawable/back_arrow"
                android:gravity="center"
                android:text="@string/bottom_nav_previous"
                android:textColor="@color/red"
                android:textSize="@dimen/default_running_text_size_small"
                />

            <TextView
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/bottom_nav_save"
                android:textColor="@color/red"
                android:textSize="@dimen/default_running_text_size_small"
              />

            <TextView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/next_arrow"
                android:drawableRight="@drawable/next_arrow"
                android:gravity="center"
                android:text="@string/bottom_nav_next"
                android:textColor="@color/red"
                android:textSize="@dimen/default_running_text_size_small"
               />

            <TextView
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/default_text_size"
                android:gravity="center"
                android:text="@string/bottom_nav_start_over"
                android:visibility="visible"
                android:textColor="@color/red"
                android:textSize="@dimen/default_running_text_size_small"
                />
        </RelativeLayout>
    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="com.android.iab.main.FragmentDrawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>
