<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/center_heading_llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_from_top_large_very"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/center_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_bottom_text"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/default_running_text_size_medium"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/abc_text_size_title_material_toolbar"
        android:id="@+id/center_box_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_heading_llayout"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_running_text_size_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="left"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="@dimen/default_running_text_size_small"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_name_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_line_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_text_size_small_very_extra"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_running_text_size_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="left"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="@dimen/default_running_text_size_small"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_line_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_text_size_small_very_extra"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/default_running_text_size_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/company_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="left"
                android:text="Company"
                android:textColor="@color/black"
                android:textSize="@dimen/default_running_text_size_small"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/company_name_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/hint_company_name"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_line_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_text_size_small_very_extra"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/default_running_text_size_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_email_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="left"
                android:text="Email"
                android:textColor="@color/black"
                android:textSize="@dimen/default_running_text_size_small"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_email_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingRight="@dimen/default_text_size_small_very_extra" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_line_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_text_size_small_very_extra"
            android:background="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/policy_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_box_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_running_text_size_small"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/policy_text1"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/policy_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/policy_text2"
            android:textColor="@color/red"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/policy_textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text=" "
            android:textColorLink="@color/red"
            android:textSize="@dimen/default_running_text_size_small_very_very" />

        <TextView
            android:id="@+id/logged_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textSize="@dimen/default_running_text_size_small_very"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_Button"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_navigation_menu_height"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/default_running_text_size_small"
            android:layout_marginRight="@dimen/default_running_text_size_small"
            android:background="@color/red"
            android:text="@string/login_bottom_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_running_text_size_small"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/skip_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_text_size"
            android:layout_marginTop="@dimen/default_text_size"
            android:gravity="center"
            android:text="@string/login_bottom_skip"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/default_running_text_size_small"
            />
    </LinearLayout>
</RelativeLayout>
