<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/top_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/default_running_text_size_small"
        android:gravity="left|center_vertical"
        android:orientation="vertical"

        android:paddingLeft="@dimen/default_running_text_size_large">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/small_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/welcome_top_text"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_running_text_size_small_very"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_logo"
        android:layout_marginTop="@dimen/default_margin_from_top_large"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_running_text_size_large">

        <TextView
            android:id="@+id/app_heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/welcome_center_heading"
            android:textColor="@color/red"
            android:textSize="@dimen/home_navigation_menu_height"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/center_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/app_heading"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/default_margin_from_top_large_very_very"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/default_running_text_size_large">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/welcome_text"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_running_text_size_small" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_text"
        android:layout_marginTop="@dimen/default_margin_from_top_large_very"
        android:gravity="center_vertical"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/user_welcome_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text=""
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_running_text_size_small"
        android:layout_marginTop="@dimen/default_running_text_size_small"
        android:layout_above="@+id/button_start"
        android:padding="@dimen/default_running_text_size_small"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_navigation_menu_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/red"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome_bottom_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/default_running_text_size_small"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>
